--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -61,3 +61,5 @@ a
     opacity: 0
 .tobi-loader
   display: none
+.body--modal-open
+  overflow: hidden
